@@ -14,7 +14,7 @@
 	<!-- Update the product roadmap when the version changes -->
 	<groupId>com.xeomar</groupId>
 	<artifactId>xenon</artifactId>
-	<version>0.5-SNAPSHOT</version>
+	<version>0.6-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Xenon</name>
@@ -24,7 +24,7 @@
 	<developers>
 		<developer>
 			<name>Mark Soderquist</name>
-			<email>mark@soderquis.net</email>
+			<email>mark@soderquist.net</email>
 			<roles>
 				<role>Architect</role>
 			</roles>
@@ -44,7 +44,7 @@
 		<product-identifier>xenon</product-identifier>
 		<package-stage-folder>program</package-stage-folder>
 		<slf4j.version>1.8.0-alpha2</slf4j.version>
-		<testfx.version>4.0.6-alpha</testfx.version>
+		<testfx.version>4.0.8-alpha</testfx.version>
 		<jarsigner.skip>true</jarsigner.skip>
 	</properties>
 
@@ -119,13 +119,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.testfx</groupId>
-			<artifactId>openjfx-monocle</artifactId>
-			<version>8u76-b04</version>
-			<scope>test</scope>
-		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -150,29 +143,6 @@
 		</resources>
 
 		<plugins>
-
-			<!--
-			The program is intended to work on Java 9, but we chose
-			to make it Java 8 compatible, to use existing test tools
-			since Java 9 has yet to be released, with the expectation
-			the program will run fine on Java 9.
-			-->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>8</source>
-					<target>8</target>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<runOrder>alphabetical</runOrder>
-				</configuration>
-			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -226,7 +196,115 @@
 			</plugin>
 
 		</plugins>
-
 	</build>
+
+	<profiles>
+
+		<!-- Profile for Java 8 -->
+		<profile>
+			<id>java8</id>
+			<activation>
+				<jdk>1.8</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<source>8</source>
+							<target>8</target>
+						</configuration>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<runOrder>alphabetical</runOrder>
+							<systemPropertyVariables>
+								<java.awt.headless>true</java.awt.headless>
+								<glass.platform>Monocle</glass.platform>
+								<monocle.platform>Headless</monocle.platform>
+								<testfx.robot>glass</testfx.robot>
+								<prism.order>sw</prism.order>
+								<prism.text>t2k</prism.text>
+							</systemPropertyVariables>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<!-- Profile for Java 9 -->
+		<profile>
+			<id>java9</id>
+			<activation>
+				<jdk>9</jdk>
+			</activation>
+
+			<dependencies>
+
+				<dependency>
+					<groupId>org.testfx</groupId>
+					<artifactId>testfx-core</artifactId>
+					<version>${testfx.version}</version>
+					<scope>test</scope>
+					<exclusions>
+						<exclusion>
+							<groupId>org.testfx</groupId>
+							<artifactId>testfx-internal-java8</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+
+				<dependency>
+					<groupId>org.testfx</groupId>
+					<artifactId>testfx-internal-java9</artifactId>
+					<version>${testfx.version}</version>
+					<scope>test</scope>
+				</dependency>
+
+				<dependency>
+					<groupId>org.testfx</groupId>
+					<artifactId>openjfx-monocle</artifactId>
+					<version>jdk-9+181</version>
+					<scope>test</scope>
+				</dependency>
+
+			</dependencies>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<source>9</source>
+							<target>9</target>
+						</configuration>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<runOrder>alphabetical</runOrder>
+							<argLine>--add-opens=java.base/java.util=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</argLine>
+							<systemPropertyVariables>
+								<java.awt.headless>true</java.awt.headless>
+								<prism.order>sw</prism.order>
+								<prism.text>t2k</prism.text>
+								<testfx.robot>glass</testfx.robot>
+								<testfx.headless>true</testfx.headless>
+								<testfx.setup.timeout>2500</testfx.setup.timeout>
+							</systemPropertyVariables>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+	</profiles>
 
 </project>
